--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <h1>GIT vss </h1>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, expedita facilis est quod eligendi rem accusantium enim soluta veniam nobis! Reiciendis doloribus commodi placeat, velit eius neque odit illo quasi!
 </body>
 </html>
