--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <h1>GIT vss </h1>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, expedita facilis est quod eligendi rem accusantium enim soluta veniam nobis! Reiciendis doloribus commodi placeat, velit eius neque odit illo quasi!
+   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum corporis accusamus molestias quidem natus facilis qui, cum odio eligendi cupiditate, nobis ad saepe reiciendis similique quia nihil, vitae nam nesciunt!</p>
 </body>
 </html>
